<resources>
    <string name="app_name">Jinglz</string>
    <string name="under_construction">Under Construction</string>
    <string name="us">US</string>
    <string name="non_us">Non-US</string>
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_error_title">Sorry</string>
    <string name="please_wait">Please wait…</string>
    <string name="action_next">Next</string>
    <string name="action_back">Back</string>
    <string name="watch_head">Watch</string>
    <string name="text_watch_title">Watch short video ads based on your likes and interests</string>
    <string name="text_watch_description">Where you win $ for watching video ads. Have the TV Networks ever paid you to watch their commercials? Not in our lifetime.</string>
    <string name="play_head">Play</string>
    <string name="text_play_title">Get entered into a Jinglz drawing to win COIN</string>
    <string name="text_play_description">After watching the short video ad, you will receive entry into an hourly drawing.</string>
    <string name="win_head">Win</string>
    <string name="text_win_title">Win BIG through hourly drawings &amp; redeem your COIN for cash</string>
    <string name="text_win_description">The more you watch, the more drawings you’re entered in and the more you accumulate.</string>
    <string name="text_welcome_to">"Welcome to "</string>
    <string name="action_sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="action_forgot_password">Forgot your password?</string>
    <string name="error_field_missing">Some fields are missing</string>
    <string name="error_password_length">Password must be at least %d characters</string>
    <string name="error_password_match">Passwords don’t match</string>
    <string name="error_sign_in_incorrect">Incorrect username or password</string>
    <string name="text_sign_in_method">or sign in using</string>
    <string name="text_or">or</string>
    <string name="text_sign_in">sign in</string>
    <string name="text_using">using</string>
    <string name="text_first_name">First Name</string>
    <string name="text_last_name">Last Name</string>
    <string name="text_email">Email</string>
    <string name="text_phone_number">Phone Number</string>
    <string name="text_password">Password</string>
    <string name="text_confirm_password">Confirm Password</string>
    <string name="text_zip_code">Zip Code</string>
    <string name="text_birth_year">Year Of Birth</string>
    <string name="text_referrer_code">Referrer\`s Code</string>
    <string name="text_male">Male</string>
    <string name="text_female">Female</string>
    <string name="text_terms_accept">I accept the terms &amp; conditions</string>
    <string name="text_terms_accept_highlight_part">terms &amp; conditions</string>
    <string name="text_or_sign_up">or <b>sign up</b> using</string>
    <string name="text_or_sign_up_black_part">sign up</string>
    <string name="action_register">Register Me!</string>
    <string name="action_register_facebook">Sign Up With Facebook</string>
    <string name="error_required">Is required</string>
    <string name="error_invalid_email">Invalid mail</string>
    <string name="error_invalid_year_of_birth">Less than minimum allowed year 1900</string>
    <string name="error_user_already_exist">User with such credential already exist.</string>
    <string name="error_facebook_user_already_exist">User with such facebookId already exist</string>
    <string name="error_account_for_this_device_already_exist">We’re sorry, looks like already exists an account for this device. Try login with your existing account</string>
    <string name="error_terms_required">You must accept the terms &amp; conditions before continuing</string>
    <string name="action_take_photo">Take photo</string>
    <string name="action_choose_photo">Choose photo</string>
    <string name="action_delete_photo">Delete photo</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_edit_avatar">Edit</string>
    <string name="error_incorrect_location">Jinglz is only available for users on United States</string>
    <string name="error_enable_location">We can\'t recognize your location</string>
    <string name="text_tagline">Watch Ad • Enter Drawing • Un-losable</string>
    <string name="title_forgot_password">Forgot your password</string>
    <string name="text_not_again">Not Again?\nOk… We\'ll send an email to change your password</string>
    <string name="text_confirm_code_password">We have emailed an activation code to %s\nEnter code to start playing</string>
    <string name="text_confirm_code_phone">We have emailed an activation code to %s\nEnter code to verify your phone number. If your number is incorrect, please check it in your Profile.</string>
    <string name="action_request_password">Request password</string>
    <string name="error_user_not_found">User not found</string>
    <string name="error_incorrect_confirm_code">Oops! We don’t recognize the code. Please check your email again or request another code</string>
    <string name="error_incorrect_confirm_code_phone">Oops! We don’t recognize the code. Please check your sms again or request another code</string>
    <string name="error_reset_password">Password not reseted</string>
    <string name="text_new_password">New Password</string>
    <string name="text_old_password">Old Password</string>
    <string name="text_conform_new_password">Conform New Password</string>
    <string name="action_change_password">Change Password</string>
    <string name="title_change_password">Change your password</string>
    <string name="action_continue">Continue</string>
    <string name="title_confirm_code">Confirm code</string>
    <string name="action_lets_jinglz">Let\'s Jinglz</string>
    <string name="text_password_changed">Password changed</string>
    <string name="text_password_changed_successfully">Your password has been changed successfully</string>
    <string name="action_sign_up">"No Account? SIGN UP Now!"</string>
    <string name="text_no_account">No Account?</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="text_now">Now!</string>
    <string name="text_my_balance">My Balance</string>
    <string name="text_coin">coin</string>
    <string name="action_redeem_coin">Redeem coin</string>
    <string name="text_today">Today</string>
    <string name="text_week">Week</string>
    <string name="text_month">Month</string>
    <string name="text_this_week">This week</string>
    <string name="text_this_month">This month</string>
    <string name="text_learn_more">Learn More</string>
    <string name="text_your_entries">Your Entries</string>
    <string name="text_lets_jinglz">Let\'s Jinglz</string>
    <string name="text_watched">Watched</string>
    <string name="text_jack_pot">Jack\nPot</string>
    <string name="text_time_left">Time\nLeft</string>
    <string name="text_draw_time">Draw\nTime</string>
    <string name="action_select">Select</string>
    <string name="action_submit">Submit</string>
    <string name="action_skip">Skip</string>
    <string name="action_send_code_again">Send code again</string>
    <string name="error_locations_permission_rejected">You have to enable location</string>
    <string name="error_server_error">Something went wrong, please try again later.</string>
    <string name="action_send_code">Send code</string>
    <string name="menu_home">Home</string>
    <string name="menu_redeem">Redeem</string>
    <string name="menu_game_history">Game history</string>
    <string name="menu_how_it_works">How it works</string>
    <string name="menu_contact_us">Contact us</string>
    <string name="menu_share">Share &amp; win</string>
    <string name="menu_settings">Settings</string>
    <string name="text_drawer_open">Open navigation</string>
    <string name="text_drawer_close">Close navigation</string>
    <string name="text_viewed">Viewed</string>
    <string name="error_no_internet">Your currently do not have \n an internet connection.</string>
    <string name="action_got_it">Got it!</string>
    <string name="action_save_changes">Save Changes</string>
    <string name="text_share_win">Share &amp; Win</string>
    <string name="text_share_message">Win cash watching fun quick videos. Download Jinglz: %s</string>
    <string name="text_share_via">Share via:</string>
    <string name="text_share_and_win">Sharing Jinglz with friends will increase the hourly jackpots. The reward amounts grow with more players in each game.</string>
    <string name="text_share_and_win_title">Share &amp; Win</string>
    <string name="text_share_code">Share your code</string>
    <string name="text_please_update_your_application">Please updated your application to the latest version</string>
    <string name="text_we_have_noticed_you_have_trouble_logging_in">We have noticed you have trouble logging in. Maybe the issue is with your password. Would you like to reset your password?</string>
    <string name="text_incorrect_email_or_password">Incorrect email or password</string>
    <string name="text_update">Update</string>
    <string name="text_reset_password">Reset password</string>
    <string name="text_close">Close</string>
    <string name="text_edit_profile">Edit your profile</string>
    <string name="text_change_password">Change password</string>
    <string name="text_services">Services</string>
    <string name="text_logout">Log out</string>
    <string name="text_how_it_works" formatted="false">%How it #Works#%\n\n
Jinglz is THE destination where you watch short mobile video ads in their entirety &amp; are entered into hourly jackpot style drawings for cash prizes. You WILL win COIN (our version of points) in every hourly drawing but the COIN amount will vary from game to game based on your RANK (position) which is chosen randomly using an automated algorithm selecting 1st place to last place positions..
\n\n%About #the Games#:%\n\n
Games are held hourly on the hour. Players have until XX:59:59 to complete watching their video ads and be validated into the drawing.
Video Ads must be watched in their entirety with the volume up to gain entry into the drawing.
\n\n%About #the Drawings#:%\n\n
The drawings will be random and select winners from 1st place all the way to last place. Every user will be given a RANK. The amount of COIN in the "jackpot" is determined by the number of participants in the hourly drawing. And the amount that is paid out is determined by your RANK.
"Jackpot" sizes will vary from drawing to drawing as will your RANK and amount of COIN you will win.
\n\n%About #the COIN#:%\n\n
COIN is our measurement for points. The amount of coin you will accumulate will vary from game to game based on where you ranked in the drawing.
Each COIN is equivalent to US$0.01, This amount is far greater than other sweepstakes and loyalty reward games in the marketplace today.
\n\n%Redeeming #COIN#:%\n\n
Redeeming COIN is easy as clicking a button and confirming an email confirmation.
COIN redemption starts at 500 COIN or US$5.00
Redeem as often as you like. There is no cost to you.
    </string>
    <string name="menu_tutorials">Tutorials</string>
    <string name="action_share" formatted="false">"%icon%  SHARE"</string>
    <string name="text_contact_us">We\'d love to hear from you!</string>
    <string name="text_comments_and_questions">Write your comments or question</string>
    <string name="action_send">Send</string>
    <string name="text_redeem_approved">Redemption approved!</string>
    <string name="text_payment_emailed">Your payment emailed to %s. If you don\`t collect within 30 days,
        PayPal will return the funds, so please make sure you collect it.</string>
    <string name="ok">OK</string>
    <string name="title_gps">Please turn on your gps location to continue using Jinglz</string>
</resources>