<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group_main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:checked="false"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/menu_redeem"
            android:checked="false"
            android:icon="@drawable/ic_redeem"
            android:title="@string/menu_redeem" />
        <item
            android:id="@+id/menu_game_history"
            android:checked="false"
            android:icon="@drawable/ic_video_his"
            android:title="@string/menu_game_history" />
        <item
            android:id="@+id/menu_how_it_works"
            android:checked="false"
            android:icon="@drawable/ic_how_it_works"
            android:title="@string/menu_how_it_works" />
        <item
            android:id="@+id/menu_contact_us"
            android:checked="false"
            android:icon="@drawable/ic_contact"
            android:title="@string/menu_contact_us" />
        <item
            android:id="@+id/menu_share"
            android:checked="false"
            android:icon="@drawable/ic_share"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/menu_tutorials"
            android:checked="false"
            android:icon="@drawable/ic_tutorials"
            android:title="@string/menu_tutorials" />

    </group>
    <group
        android:id="@+id/group_settings"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_settings"
            android:checked="false"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>
