<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/large">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large"
        android:text="@string/text_password_changed"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/normal"
        android:layout_marginTop="@dimen/normal"
        android:gravity="center"
        android:text="@string/text_password_changed_successfully"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead" />

    <Button
        android:id="@+id/button_lets_jinglz"
        style="@style/Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large"
        android:text="@string/action_lets_jinglz" />

</LinearLayout>
