<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loading"
    android:layout_width="290dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <FrameLayout
        android:id="@+id/warning_frame"
        android:layout_width="53dp"
        android:layout_height="53dp"
        android:layout_marginTop="5dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/warning_circle" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="center"
            android:src="@drawable/warning_sigh" />

    </FrameLayout>


    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:singleLine="true"
        android:text="Location require"
        android:textColor="#575757"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/content_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="#797979"
        android:textSize="14sp"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        android:text="@string/title_gps" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/cancel_button"
            style="@style/dialog_blue_button"
            android:layout_marginRight="10dp"
            android:background="@drawable/gray_button_background"
            android:text="@string/action_cancel" />

        <Button
            android:id="@+id/confirm_button"
            android:textColor="@color/gray_btn_bg_color"
            style="@style/dialog_blue_button"
            android:text="@string/ok" />
    </LinearLayout>
</LinearLayout>