<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/large"
        android:src="@drawable/message" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/view_spacing_normal"
        android:layout_marginEnd="@dimen/large"
        android:layout_marginStart="@dimen/large"
        android:layout_marginTop="@dimen/view_spacing_normal"
        android:gravity="center_horizontal"
        android:text="@string/text_redeem_approved"
        android:textColor="@color/dialog_color_title"
        android:textSize="@dimen/textLarge" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/view_spacing_normal"
        android:layout_marginEnd="@dimen/view_spacing_normal"
        android:layout_marginStart="@dimen/view_spacing_normal"
        android:gravity="center_horizontal"
        android:text="@string/text_payment_emailed"
        android:textColor="@color/textSecondary" />

    <Button
        android:id="@+id/button_share"
        style="@style/Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_spacing_large"
        android:background="@drawable/background_button_blue"
        android:includeFontPadding="false"
        android:text="@string/action_share"
        android:textAllCaps="false" />
</LinearLayout>