<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:id="@+id/root_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.Toolbar"
            app:navigationIcon="@drawable/ic_back" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="@dimen/large"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.jinglz.app.ui.base.widget.CustomTextInputLayout
            android:id="@+id/old_password_layout"
            style="@style/InputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_old_password"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_old_password"
                android:inputType="textPassword" />

        </com.jinglz.app.ui.base.widget.CustomTextInputLayout>

        <com.jinglz.app.ui.base.widget.CustomTextInputLayout
            android:id="@+id/new_password_layout"
            style="@style/InputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_new_password"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_new_password"
                android:inputType="textPassword" />

        </com.jinglz.app.ui.base.widget.CustomTextInputLayout>

        <com.jinglz.app.ui.base.widget.CustomTextInputLayout
            android:id="@+id/confirm_password_layout"
            style="@style/InputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_confirm_password"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_conform_new_password"
                android:inputType="textPassword" />

        </com.jinglz.app.ui.base.widget.CustomTextInputLayout>

        <Button
            android:id="@+id/button_reset_password"
            style="@style/Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium"
            android:text="@string/action_change_password" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
