<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:id="@+id/root_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.Toolbar"
            app:navigationIcon="@drawable/ic_back" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/large"
            android:layout_marginStart="@dimen/large"
            android:layout_marginTop="@dimen/large"
            android:gravity="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            tools:text="@string/text_confirm_code_phone" />

        <com.alimuzaffar.lib.pin.PinEntryEditText
            android:id="@+id/text_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:digits="1234567890"
            android:layout_marginEnd="@dimen/large"
            android:layout_marginStart="@dimen/large"
            android:inputType="number"
            android:maxLength="6"
            app:pinBackgroundIsSquare="true"
            android:textColor="@color/black"
            app:pinLineStroke="@dimen/default_stroke_width"
            android:layout_marginTop="@dimen/normal"
            android:textIsSelectable="false"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead" />

        <Button
            android:id="@+id/button_submit"
            style="@style/Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/large"
            android:layout_marginStart="@dimen/large"
            android:layout_marginTop="@dimen/medium"
            android:text="@string/action_submit" />

        <Button
            android:id="@+id/button_send"
            style="@style/ButtonBorderless.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/large"
            android:layout_marginStart="@dimen/large"
            android:layout_marginTop="@dimen/normal"
            android:text="@string/action_send_code" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_skip"
                style="@style/ButtonBorderless.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="@dimen/medium"
                android:background="@color/textHint"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/action_skip"
                android:textColor="@color/blue" />

        </FrameLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
